Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

08-Nov-2010 Christophe Demko
 # [#23160] Give each manager the possibility to choose its own admin template style

07-Nov-2010 Jean-Marie Simonet
 # [#22757] Wrong urls being produced for drill downs. Thanks Christophe.
 # [#23159] Improving display of back-end mod_latest module

07-Nov-2010 Mark Dexter
# [#22776] Incorrect path field and child item path fields not being changed on save.

07-Nov-2010 Christophe Demko
 # [#21789] Category Manger save alias as date instead of category name when renaming a category (Elin Waring)
 # [#21571] category blog view drill down does not maintain layout style
 # [#22515] P3P tags are hardcoded in JSession (Nicholas Dionysopoulos)
 ^ Fix some issues relative to #21571

06-Nov-2010 Christophe Demko
 # [#21577] Pagebreak Plugin called via JHtml::_('content.prepare') issue

06-Nov-2010 Jean-Marie Simonet
 # [#23134] Template description is only displayed at installation, no where else
 # [#23141] Module Position Fixes for Hathor. Thanks Andrea.
 # [#23028] Install Sample Data button reactivated when there is error on Main Configuration Page. Thanks Nicolai.

06-Nov-2010 Andrew Eddie
 # Fixed issue [#22628] Module Assignment in Module Manager changes to No pages incorrectly (Zachary Draper, Mathavan Jeyadev, Elin Waring).

05-Nov-2010 Mark Dexter
# [#22444] JRegistry fails when binding an object which contains a JRegistry object

05-Nov-2010 Christophe Demko
 $ Storing the default style name without ** when language debug is on while installing template
 # [#23128] Incorrect Calendar field width (Dennis Hermacki)
 # [#22949] Custom error types are always shown as 'Message' (Dennis Hermacki)

05-Nov-2010 Jean-Marie Simonet
 # [#21798] Saving Profile Plugin configuration disables Profile, Thanks Mathavan and Elin.