@@ -176,7 +176,7 @@ defined('_JEXEC') or die;
 					</p>
 					<p id="power_by">
 						<?php
-						$joomla = '<a href="http://www.joomla.org">Joomla!</a>';
+						$joomla = '<a href="http://www.joomla.org">Joomla!®</a>';
 						echo JText::sprintf('TPL_RHUK_MILKYWAY_POWERED', $joomla);
 						$XHTML = '<a href="http://validator.w3.org/check/referer">XHTML</a>';
 						$CSS = '<a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a>';
